# garmin-zwo-fit-converter

./: b1_s46_bici_larga.fit  main.py  pyproject.toml
fit/: B1_S45_BICI_Larga.fit  B1_S45_BICI_SweetSpot2x12.fit  B1_S45_BICI_SweetSpot3x8.fit  B1_S45_RUN_Umbral3x8.fit  B1_S46_BICI_Larga.fit  B1_S46_BICI_SweetSpot3x10.fit  B1_S46_BICI_SweetSpot4x8.fit  B1_S46_RUN_Umbral2x12.fit  B1_S47_BICI_Larga.fit  B1_S47_BICI_SweetSpot2x15.fit  B1_S47_BICI_SweetSpot3x10.fit  B1_S47_RUN_Umbral3x10.fit  B1_S48_BICI_Larga.fit  B1_S48_BICI_SweetSpot2x8.fit  B1_S48_BICI_Tempo.fit  B1_S48_RUN_RodajeZ2.fit  B1_S48_RUN_Strides.fit  B1_S49_BICI_Larga.fit  B1_S49_BICI_SweetSpot2x15.fit  B1_S49_BICI_VO2_6x2.fit  B1_S49_RUN_Rodaje55.fit  B1_S49_RUN_Umbral2x12.fit  B1_S50_BICI_Larga.fit  B1_S50_BICI_SweetSpot3x12.fit  B1_S50_BICI_VO2_5x3.fit  B1_S50_RUN_Rodaje60.fit  B1_S50_RUN_Umbral3x8.fit  B1_S51_BICI_Larga.fit  B1_S51_BICI_SweetSpot3x15.fit  B1_S51_BICI_VO2_6x3.fit  B1_S51_RUN_Rodaje65.fit  B1_S51_RUN_Umbral3x10.fit  B1_S52_BICI_Larga.fit  B1_S52_BICI_Suave60.fit  B1_S52_BICI_Suave90.fit  B1_S52_RUN_Progresivo40.fit  B1_S52_RUN_Suave50.fit  B2_S01_BICI_Larga.fit  B2_S01_BICI_SweetSpot3x12.fit  B2_S01_BICI_VO2_6x3.fit  (+115 more)
zwo copy/: B1_S45_BICI_Larga.zwo  B1_S45_BICI_SweetSpot2x12.zwo  B1_S45_RUN_Umbral3x8.zwo  B1_S46_BICI_Larga.zwo  B1_S47_BICI_Larga.zwo  B1_S47_RUN_Umbral3x10.zwo  B1_S48_RUN_RodajeZ2.zwo  B1_S49_RUN_Umbral2x12.zwo  B1_S50_BICI_SweetSpot3x12.zwo  B1_S50_RUN_Umbral3x8.zwo  B1_S52_BICI_Larga.zwo  B1_S52_BICI_Suave60.zwo  B1_S52_RUN_Progresivo40.zwo  B2_S01_BICI_Larga.zwo  (+26 more)
(+120 files in other folders)
