[project]
name = "garmin"
version = "0.1.0"
description = ""
authors = [
    {name = "efzo",email = "efzo@novonordisk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fit-tool (>=0.9.13,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
